Soft hyphens with long suffix may add unnecessary hyphens

This patch fixes unnecessary hyphens appear when soft hyphens are used
and its suffix is too long to fit.

In that case, m_lineBreak is still pointing to the last break
opportunity, which is the beginning of the line, and the character
before is on the previous line.

Also, different code doing the same logic for when the word with soft
hyphen is at the end of a text node and is not are unified.

BUG=627715

Review-Url: https://codereview.chromium.org/2167093002
Cr-Commit-Position: refs/heads/master@{#407025}

Former-commit-id: 33af59cf0bf37f84d6e6423442fc90ffa14176cd